--- a/chrome-extension/public/popup.html
+++ b/chrome-extension/public/popup.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="light">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bore Proxy</title>
-  <style>
-    body {
-      width: 300px;
-      min-height: 400px;
-      margin: 0;
-      padding: 16px;
-    }
-  </style>
 </head>
 <body>
   <div id="root">Loading...</div>
